Changes in version 0.1.2.8-alpha - 2007-??-??
  o Major bugfixes (accounting):
    - When we start during an accounting interval before it's time to wake
      up, remember to wake up at the correct time. (May fix bug 342.)

  o Major bugfixes (crashes):
    - Stop crashing when the controller asks us to resetconf more than
      one config option at once. (Vidalia 0.0.11 does this.)

  o Minor bugfixes (controller):
    - Give the controller END_STREAM_REASON_DESTROY events _before_ we
      clear the corresponding on_circuit variable, and remember later that
      we don't need to send a redundant CLOSED event.  (Resolves part 3 of
      bug 367.)
    - Report events where a resolve succeeded or where we got a socks
      protocol error correctly, rather than calling both of them
      "INTERNAL".

  o Minor bugfixes (other):
    - Display correct results when reporting which versions are
      recommended, and how recommended they are. (Resolves bug 383.)
    - Improve our estimates for directory bandwidth to be less random:
      guess that an unrecognized directory will have the average bandwidth
      from all known directories, not that it will have the average
      bandwidth from those directories earlier than it on the list.
    - If we start a server with ClientOnly 1, then set ClientOnly to 0
      and hup, stop triggering an assert based on an empty onion_key.
    - On platforms with no working mmap() equivalent, don't warn the
      user when cached-routers doesn't exist.
    - Warn the user when mmap() [or its equivalent] fails for some reason
      other than file-not-found.
    - Don't warn the user when cached-routers.new doesn't exist: that's
      perfectly fine when starting up for the first time.
    - Don't try to load NT service functions from advapi32.dll except when
      we need them. (bug introduced in 0.1.2.7-alpha).

  o Minor features:
    - Warn the user when an application uses the obsolete binary v0